--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.btn-primary{
+  background-color: var(--primary) !important;
+  border: var(--primary) !important;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
